# forze

./: .codacy.yaml  .coderabbit.yaml  .envrc  .gitignore  .gitleaks.toml  .markdownlint.yaml  .pre-commit-config.yaml  .sourcery.yaml  AGENTS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  justfile  main.code-workspace  mkdocs.yml  pyproject.toml  skills-lock.json  test_bandit.py  verify_optimization.py
.agent/rules/: pytest-style.mdc  repo-state-changes.mdc  specify-rules.mdc
.agent/workflows/: speckit.approve.md  speckit.publish.md
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/scripts/: ci-set-force-full.sh  combine-coverage.sh  compute-version-from-tag.sh  configure-git-identity.sh  coverage_floors.py  deploy-docs-version.sh  ensure-tag-on-main.sh  install-d2.sh  perf-benchmark-gate.sh  perf-prepare-envs.sh  resolve-docs-version.sh  verify-required-ci.sh
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docs-dev.yaml  docs-release.yaml  pages.yaml  release.yaml  scorecard.yaml  test-report.yml
.greptile/: config.json
.jules/: atlas.md  steward.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
0.4/: 404.html  index.html  search.json  sitemap.xml
0.4/_javascripts/: hero.js
0.4/integrations/: index.html
0.5/: 404.html  index.html  sitemap.xml
0.5/_javascripts/: theme.js
0.5/_stylesheets/: hero.css
0.5/integrations/: index.html
dev/: 404.html  index.html  search.json  sitemap.xml
dev/_javascripts/: hero.js  theme.js
dev/_stylesheets/: extra.css  hero.css
dev/integrations/: index.html
docs/: CORE_CONCEPTS.md  DOCKER.md  index.md  installation.md
docs/integrations/: index.md  postgres.md  redis.md  s3.md
examples/: README.md  __init__.py  example_fastapi.py  log.py  mcp_server.py  order_fulfillment.py
examples/quickstart/: app.py
pages/: justfile  mkdocs.yml  zensical.toml
pages/_includes/: abbreviations.md
pages/diagrams/: authn-multi-idp-routes.d2  authn-verify-resolve.d2  concept-overview.d2  concurrency-merge.d2  contracts-adapters.d2  crypto-envelope.d2  deadline-propagation.d2  deps-resolution.d2  document-cache-flow.d2  document-crud-flow.d2  domain-models.d2  dst-crash-restart.d2  dst-exploration.d2  dst-invariants.d2  dst-loop.d2  dst-port-boundary.d2  dst-seed.d2  errors-flow.d2  execution-runtime.d2  fastapi-request-flow.d2  getting-started-flow.d2  integration-adapter-boundary.d2  layered-architecture.d2  operation-anatomy.d2  operation-composition.d2  operation-registry.d2  resilience-stack.d2  runtime-lifecycle.d2  tenancy-isolation.d2  transaction-scope.d2
pages/docs/: core-concepts.md  first-project-walkthrough.md  getting-started.md  index.md  installation.md
pages/overrides/: main.html
pages_v2/: zensical.toml
pages_v2/diagrams/: authn-verify-resolve.d2  dependency-plan.d2  deps-resolution.d2  events-flow.d2  execution-runtime.d2  getting-started-flow.d2  hero-swap.d2  layered-architecture.d2  operation-composition.d2  runtime-lifecycle.d2
pages_v2/docs/: index.md
skills/: AUTHORING.md  README.md
skills/forze-analytics/: SKILL.md
skills/forze-analytics-bigquery/: SKILL.md
skills/forze-analytics-clickhouse/: SKILL.md
skills/forze-application-layer/: SKILL.md
skills/forze-architecture/: SKILL.md
skills/forze-auth-tenancy-secrets/: SKILL.md
skills/forze-custom-deps/: SKILL.md
skills/forze-deps-consumption/: SKILL.md
skills/forze-deps-modules/: SKILL.md
skills/forze-documents-search/: SKILL.md
skills/forze-domain-aggregates/: SKILL.md
skills/forze-domain-modeling/: SKILL.md
skills/forze-encryption-kms/: SKILL.md
skills/forze-fastapi-integration/: SKILL.md
skills/forze-fastapi-interface/: SKILL.md
skills/forze-framework-usage/: SKILL.md
skills/forze-graph-contracts/: SKILL.md
skills/forze-http-outbound/: SKILL.md
skills/forze-inngest-durable-functions/: SKILL.md
skills/forze-messaging-streaming/: SKILL.md
skills/forze-object-storage/: SKILL.md
skills/forze-observability-errors/: SKILL.md
skills/forze-ports-and-adapters/: SKILL.md
skills/forze-resilience-deadlines/: SKILL.md
skills/forze-specs-infrastructure/: SKILL.md
skills/forze-storage-gcs/: SKILL.md
skills/forze-storage-s3/: SKILL.md
skills/forze-temporal-workflows/: SKILL.md
skills/forze-testing/: SKILL.md
skills/forze-wiring/: SKILL.md
specs/001-postgres-query-builder-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-base-domain-tests/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-forze-unit-tests/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/forze/: __init__.py  _constants.py  _logging.py  testing.py
src/forze_auth/: __init__.py  specs.py
src/forze_authn/: __init__.py  orchestrator.py
src/forze_authz/: __init__.py
src/forze_awskms/: __init__.py  _compat.py  _logging.py
src/forze_bigquery/: __init__.py  _compat.py  _logging.py
src/forze_cli/: __init__.py  _compat.py  app.py  dst.py  loader.py
src/forze_clickhouse/: __init__.py  _compat.py  _logging.py
src/forze_dst/: __init__.py  bundle.py  cluster.py  config.py  context.py  corpus.py  coverage.py  cpu.py  derive.py  explore_guided.py  faults.py  harness.py  invariants.py  latency.py  linearizability.py  loop.py  markers.py  oracle.py  projection.py  reachability.py  reactive.py  recorder.py  report.py  runtime.py  scenario.py  scheduler.py  serialize.py  sweep.py  time_source.py  workload.py
src/forze_duckdb/: __init__.py  _compat.py  _logging.py
src/forze_fastapi/: __init__.py  _compat.py  _constants.py  _logging.py  constants.py  docs.py  exceptions.py  lifespan.py  logging.py
src/forze_firestore/: __init__.py  _compat.py  _logging.py
src/forze_gcs/: __init__.py  _compat.py  _logging.py
src/forze_http/: __init__.py  (+3 more)
tests/: README.md  __init__.py  conftest.py
(+4711 files in other folders)
