[project]
name = "forze"
dynamic = ["version"]
requires-python = ">=3.13,<3.15"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Development Status :: 4 - Beta",
]
description = "Domain-Driven Design and Hexagonal Architecture for backend services"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Lev Litvinov", email = "misery7100@gmail.com" }]
maintainers = [{ name = "Lev Litvinov", email = "misery7100@gmail.com" }]
keywords = [
    "architecture",
    "ddd",
    "hexagonal",
    "domain-driven-design",
    "hexagonal-architecture",
    "framework",
    "kernel",
]

# ....................... #
# Dependencies

dependencies = [
    "attrs>=25.4.0",
    "more-itertools>=10.8.0",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-sdk>=1.40.0",
    "orjson>=3.11.7",
    "pydantic>=2.12.5",
    "pydantic-extra-types>=2.11.0",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
    "rich>=14.0.0",
    "structlog>=25.0.0",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "anyio>=4.12.1",
    "bandit>=1.9.3",
    "deptry>=0.24.0",
    "import-linter>=2.10",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "radon>=6.0.1",
    "ruff>=0.15.5",
    "testcontainers[minio,rabbitmq]>=4.14.1",
    "types-python-dateutil>=2.9.0.20260305",
    "types-pyyaml>=6.0.12.20250915",
    "vulture>=2.14",
    "pre-commit>=4.5.1",
]
docs = [
    "mkdocs>=1.6.1,<2.0.0",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-pygments>=0.1.0",
    "mkdocs-shadcn>=0.10.1",
    "mkdocstrings[python]>=1.0.3",
    "pygments>=2.19.2",
    "pymdown-extensions>=10.21",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.135.1",
    "httpx>=0.28.0",
    "scalar-fastapi>=1.8.0",
    "starlette>=0.52.1",
]
postgres = ["psycopg-pool>=3.3.0", "psycopg[binary]>=3.3.3"]
redis = ["redis>=7.3.0"]
temporal = ["temporalio>=1.23.0"]
s3 = [
    "aioboto3>=15.5.0",
    "aiobotocore>=2.25.1",
    "botocore>=1.40.61",
    "python-magic>=0.4.27",
    "types-aioboto3[s3]>=15.5.0",
    "types-aiobotocore>=3.1.3",
]
sqs = [
    "aioboto3>=15.5.0",
    "aiobotocore>=2.25.1",
    "botocore>=1.40.61",
    "types-aioboto3[sqs]>=15.5.0",
    "types-aiobotocore>=3.1.3",
]
mongo = ["pymongo>=4.16.0"]
rabbitmq = ["aio-pika>=9.6.1"]
socketio = [
    "python-socketio>=5.16.1",
    "python-socketio-stubs>=5.16.1.0.20260211",
]

# ....................... #

[project.urls]
homepage = "https://github.com/morzecrew/forze"
documentation = "https://morzecrew.github.io/forze/"
changelog = "https://github.com/morzecrew/forze/blob/main/CHANGELOG.md"

# ....................... #
# Build

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "pyproject.toml",
    "README.md",
    "uv.lock",
    "tests",
    "CHANGELOG.md",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/forze",
    "src/forze_fastapi",
    "src/forze_mock",
    "src/forze_postgres",
    "src/forze_redis",
    "src/forze_s3",
    "src/forze_socketio",
    "src/forze_temporal",
    "src/forze_mongo",
    "src/forze_rabbitmq",
    "src/forze_sqs",
]

[tool.hatch.build.hooks.vcs]
version-file = "src/forze/_version.py"

# ....................... #
# Pytest

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Deprecated call to `pkg_resources.declare_namespace`:DeprecationWarning",
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
    "ignore::pytest.PytestCollectionWarning",
]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
pythonpath = ["src"]
addopts = ["--tb=short", "--strict-markers", "--strict-config"]
asyncio_mode = "auto"
markers = [
    "perf: Performance test",
    "integration: Integration test",
    "unit: Unit test",
    "asyncio: Async test",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/__init__.py", "*/_version.py", "*/_compat.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
# fail_under = 90 # disabled for time being
precision = 1
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

# ....................... #
# Mypy configuration

[tool.mypy]
strict = true
warn_return_any = false
warn_unused_ignores = false

# ....................... #
# Import contracts

[tool.importlinter]
root_packages = [
    "forze",
    "forze_fastapi",
    "forze_mock",
    "forze_postgres",
    "forze_redis",
    "forze_s3",
    "forze_socketio",
    "forze_temporal",
    "forze_mongo",
    "forze_rabbitmq",
    "forze_sqs",
]
exclude_type_checking_imports = true

[[tool.importlinter.contracts]]
name = "Layered `forze` package architecture"
type = "layers"
layers = ["forze.application", "forze.domain", "forze.base"]

[[tool.importlinter.contracts]]
name = "Layered `forze.application` module architecture"
type = "layers"
layers = [
    "forze.application.composition",
    "forze.application.usecases",
    "forze.application.execution",
    "forze.application.dto",
    "forze.application.mapping",
    "forze.application.contracts",
]

[[tool.importlinter.contracts]]
name = "Layered `forze.domain` module architecture"
type = "layers"
layers = [
    "forze.domain.mixins",
    "forze.domain.models",
    "forze.domain.validation",
]

[[tool.importlinter.contracts]]
name = "Protect integration subpackages"
type = "protected"
protected_modules = [
    "forze_fastapi",
    "forze_mock",
    "forze_postgres",
    "forze_redis",
    "forze_s3",
    "forze_socketio",
    "forze_temporal",
    "forze_mongo",
    "forze_rabbitmq",
    "forze_sqs",
]
allowed_importers = []
as_packages = true

[[tool.importlinter.contracts]]
name = "Layered `forze_fastapi` package architecture"
type = "layers"
layers = [
    "forze_fastapi.routers",
    "forze_fastapi.routing",
    "forze_fastapi.constants",
]

# ....................... #
# Dead code

[tool.vulture]
paths = [
    "src/forze",
    "src/forze_fastapi",
    "src/forze_mock",
    "src/forze_postgres",
    "src/forze_redis",
    "src/forze_s3",
    "src/forze_socketio",
    "src/forze_temporal",
    "src/forze_mongo",
    "src/forze_rabbitmq",
    "src/forze_sqs",
]
sort_by_size = true
min_confidence = 80

# ....................... #
# Maintainability and complexity

[tool.radon]
exclude = ["tests/**"]
cc_min = "C"
mi_min = "B"

# ....................... #
# Dependency analysis

[tool.deptry]
known_first_party = [
    "forze",
    "forze_fastapi",
    "forze_mock",
    "forze_postgres",
    "forze_redis",
    "forze_s3",
    "forze_socketio",
    "forze_temporal",
    "forze_mongo",
    "forze_rabbitmq",
    "forze_sqs",
]
ignore_notebooks = true

[tool.deptry.per_rule_ignores]
DEP002 = [
    "pydantic-extra-types",
    "types-aioboto3",
    "types-aiobotocore",
    "aiobotocore",
    "temporalio",
    "httpx",                 # required by starlette.testclient.TestClient
    "python-socketio-stubs",
]
DEP003 = ["types_aiobotocore_s3", "types_aiobotocore_sqs", "typing_extensions"]

# ....................... #
# Ruff configuration

[tool.ruff.lint]
ignore = ["E402"]
