[project]
name = "forze"
dynamic = ["version"]
requires-python = ">=3.13,<3.15"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Development Status :: 4 - Beta",
]
description = "Domain-Driven Design and Hexagonal Architecture for backend services"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Lev Litvinov", email = "misery7100@gmail.com" }]
maintainers = [{ name = "Lev Litvinov", email = "misery7100@gmail.com" }]
keywords = [
    "architecture",
    "ddd",
    "hexagonal",
    "domain-driven-design",
    "hexagonal-architecture",
    "framework",
    "kernel",
]

# ....................... #
# Dependencies

dependencies = [
    "attrs>=25.4.0",
    "cryptography>=44.0.1",
    "msgspec>=0.21.1",
    "opentelemetry-api>=1.39.0",
    "opentelemetry-sdk>=1.39.0",
    "orjson>=3.11.7",
    "pydantic>=2.12.5",
    "pydantic-extra-types>=2.11.0",
    "pyyaml>=6.0.3",
    "rich>=14.0.0",
    "structlog>=25.0.0",
]

[dependency-groups]
dev = [
    "anyio>=4.12.1",
    "bandit>=1.9.3",
    "deptry>=0.24.0",
    "import-linter>=2.10",
    "mypy[faster-cache]>=1.19.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.3.0",
    "pytest-xdist>=3.8.0",
    "radon>=6.0.1",
    "ruff>=0.15.5",
    "testcontainers[minio,rabbitmq,vault,google,clickhouse,neo4j]>=4.14.1",
    "types-pyyaml>=6.0.12.20250915",
    "vulture>=2.14",
    "pre-commit>=4.5.1",
    "dirty-equals>=0.11",
    "polyfactory>=3.3.0",
    "hypothesis>=6.153.0",
    "py-spy>=0.4.2",
    # Lakehouse fixture writers for forze_duckdb integration tests (delta/iceberg are
    # read via DuckDB extensions at runtime; these only create the tables to read).
    "deltalake>=0.22.0",
    "pyiceberg[sql-sqlite]>=0.8.0",
]
docs = [
    "zensical>=0.0.43",
    "pygments>=2.19.2",
    "pymdown-extensions>=10.21",
    "mike",
]

[tool.uv.sources]
# Zensical's mike fork (no PyPI release). Pin the exact commit: an unpinned git
# source tracks the default branch's HEAD, so any later `uv lock` (e.g. bumping
# another dep) would silently re-resolve mike — a docs-build change with no diff
# in this file. Bump deliberately by updating the rev. (== the current uv.lock.)
mike = { git = "https://github.com/squidfunk/mike", rev = "2d4ad799442f4592db8ad53b179bfb33db8c69ac" }

# ....................... #
# Optional dependencies

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.135.1",
    "httpx>=0.28.0",
    "python-multipart>=0.0.22",
    "scalar-fastapi>=1.8.0",
    "starlette>=0.52.1",
    "uvicorn[standard]>=0.42.0",
]
postgres = ["psycopg-pool>=3.3.0", "psycopg[binary]>=3.3.3"]
redis = ["redis>=7.3.0"]
temporal = ["temporalio>=1.23.0"]
s3 = [
    "aioboto3>=15.5.0",
    "aiobotocore>=2.25.1",
    "botocore>=1.40.61",
    "python-magic>=0.4.27",
    "types-aioboto3[s3]>=15.5.0",
    "types-aiobotocore>=3.1.3",
]
sqs = [
    "aioboto3>=15.5.0",
    "aiobotocore>=2.25.1",
    "botocore>=1.40.61",
    "types-aioboto3[sqs]>=15.5.0",
    "types-aiobotocore>=3.1.3",
]
mongo = ["pymongo>=4.16.0"]
firestore = ["google-cloud-firestore>=2.21.0"]
gcs = ["aiohttp>=3.11.0", "gcloud-aio-storage>=9.6.0", "python-magic>=0.4.27"]
bigquery = ["aiohttp>=3.11.0", "gcloud-aio-bigquery>=7.1.0"]
clickhouse = ["clickhouse-connect[async]>=1.0.0"]
duckdb = ["duckdb>=1.1.0", "pyarrow>=17.0.0"]
rabbitmq = ["aio-pika>=9.6.1"]
socketio = [
    "python-socketio>=5.16.1",
    "python-socketio-stubs>=5.16.1.0.20260211",
]
neo4j = ["neo4j>=6.1.0"]
authn = [
    "argon2-cffi>=25.1.0",
    "email-validator>=2.3.0",
    "pyjwt[crypto]>=2.12.1",
]
oidc = ["pyjwt[crypto]>=2.12.1", "httpx>=0.28.0"]
vault = [
    "hvac[parser]>=2.4.0",
    "requests>=2.34.2",
    "types-hvac>=2.4.0.20260518",
    "urllib3>=2.7.0",
]
inngest = ["inngest>=0.5.18"]
meilisearch = ["meilisearch-python-sdk>=7.2.1"]
http = ["httpx>=0.28.0"]
mcp = ["fastmcp>=3.0.0", "mcp>=1.27.0"]

# ....................... #

[project.urls]
homepage = "https://github.com/morzecrew/forze"
documentation = "https://morzecrew.github.io/forze/"
changelog = "https://github.com/morzecrew/forze/blob/main/CHANGELOG.md"

# ....................... #
# Build

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "pyproject.toml",
    "README.md",
    "uv.lock",
    "tests",
    "CHANGELOG.md",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/forze",
    "src/forze_kits",
    "src/forze_fastapi",
    "src/forze_mock",
    "src/forze_mongo",
    "src/forze_firestore",
    "src/forze_postgres",
    "src/forze_rabbitmq",
    "src/forze_redis",
    "src/forze_s3",
    "src/forze_gcs",
    "src/forze_bigquery",
    "src/forze_clickhouse",
    "src/forze_duckdb",
    "src/forze_identity",
    "src/forze_socketio",
    "src/forze_sqs",
    "src/forze_temporal",
    "src/forze_inngest",
    "src/forze_vault",
    "src/forze_meilisearch",
    "src/forze_http",
    "src/forze_neo4j",
    "src/forze_mcp",
]

[tool.hatch.build.hooks.vcs]
version-file = "src/forze/_version.py"

# ....................... #
# Pytest

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Deprecated call to `pkg_resources.declare_namespace`:DeprecationWarning",
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
    "ignore::pytest.PytestCollectionWarning",
]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
pythonpath = ["src", "tests"]
addopts = ["--tb=short", "--strict-markers", "--strict-config"]
asyncio_mode = "auto"
# Safety net: no test may hang the run indefinitely. On timeout, dump all thread
# stacks and kill the process (the `thread` method guarantees the run can't stick).
# Defense-in-depth, not a fix — it's how the Temporal-sandbox/coverage-sysmon deadlock
# (see CI's COVERAGE_CORE=ctrace) was diagnosed: the dumped stack pinpointed the wedge.
# Generous enough to cover container/session-fixture startup on a cold runner.
timeout = 300
timeout_method = "thread"
markers = [
    "perf: Performance benchmark (excluded from default just test; not all perf tests need Docker)",
    "perf_gate: In-process, deterministic benchmark gated for regressions in CI (same-runner A/B vs merge-base)",
    "integration: Integration test",
    "unit: Unit test",
    "asyncio: Async test",
    "mongo_atlas_search: Integration test requiring mongodb/mongodb-atlas-local",
]

[tool.coverage.run]
source = ["src"]
branch = true
# Relative paths so per-shard data files combine cleanly across CI jobs.
relative_files = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/_version.py",
    "*/_compat.py",
    "*/_logging.py",
    # Temporal worker interceptors are exercised with a full SDK runtime.
    "*/forze_temporal/interceptors/*",
    # Redis deps module is exercised with a full SDK runtime.
    "*/forze_redis/execution/deps/module.py",
    "*/forze_meilisearch/execution/deps/module.py",
    "*/forze_neo4j/execution/deps/module.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
sort = "cover"
precision = 1
# Core packages: enforced in CI (see .github/workflows/ci.yml).
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

# ....................... #
# Mypy configuration

[tool.mypy]
strict = true
warn_return_any = false
warn_unused_ignores = false

# ....................... #
# Import contracts

[tool.importlinter]
root_packages = [
    "forze",
    "forze_kits",
    "forze_fastapi",
    "forze_mock",
    "forze_postgres",
    "forze_redis",
    "forze_s3",
    "forze_gcs",
    "forze_bigquery",
    "forze_clickhouse",
    "forze_duckdb",
    "forze_socketio",
    "forze_temporal",
    "forze_inngest",
    "forze_mongo",
    "forze_firestore",
    "forze_rabbitmq",
    "forze_sqs",
    "forze_identity",
    "forze_vault",
    "forze_meilisearch",
    "forze_http",
    "forze_neo4j",
    "forze_mcp",
]
exclude_type_checking_imports = true

[[tool.importlinter.contracts]]
name = "Layered `forze` package architecture"
type = "layers"
layers = ["forze.application", "forze.domain", "forze.base"]

[[tool.importlinter.contracts]]
name = "Layered `forze.application` module architecture"
type = "layers"
layers = [
    "forze.application.hooks",
    "forze.application.execution",
    "forze.application.integrations",
    "forze.application.contracts",
]

[[tool.importlinter.contracts]]
name = "Core forze must not import forze_kits"
type = "forbidden"
source_modules = ["forze"]
forbidden_modules = ["forze_kits"]

[[tool.importlinter.contracts]]
name = "Authz contracts do not import execution contracts"
type = "forbidden"
source_modules = ["forze.application.contracts.authz"]
forbidden_modules = ["forze.application.contracts.execution"]

[[tool.importlinter.contracts]]
name = "Resilience contracts do not import execution"
type = "forbidden"
source_modules = ["forze.application.contracts.resilience"]
forbidden_modules = ["forze.application.execution"]

[[tool.importlinter.contracts]]
name = "Domain contracts do not import execution"
type = "forbidden"
source_modules = ["forze.application.contracts.domain"]
forbidden_modules = ["forze.application.execution"]

[[tool.importlinter.contracts]]
name = "Idempotency contracts do not import execution"
type = "forbidden"
source_modules = ["forze.application.contracts.idempotency"]
forbidden_modules = ["forze.application.execution"]

[[tool.importlinter.contracts]]
name = "Inbox contracts do not import execution"
type = "forbidden"
source_modules = ["forze.application.contracts.inbox"]
forbidden_modules = ["forze.application.execution"]

[[tool.importlinter.contracts]]
name = "Saga contracts do not import execution"
type = "forbidden"
source_modules = ["forze.application.contracts.saga"]
forbidden_modules = ["forze.application.execution"]

[[tool.importlinter.contracts]]
name = "Layered `forze.domain` module architecture"
type = "layers"
layers = ["forze.domain.models", "forze.domain.validation"]

[[tool.importlinter.contracts]]
name = "forze_kits.domain must not import forze_kits.aggregates"
type = "forbidden"
source_modules = ["forze_kits.domain"]
forbidden_modules = ["forze_kits.aggregates"]

[[tool.importlinter.contracts]]
name = "Only sanctioned consumers may import forze_kits"
type = "protected"
protected_modules = ["forze_kits"]
allowed_importers = ["forze_fastapi"]
as_packages = true

[[tool.importlinter.contracts]]
name = "Nothing imports forze_identity"
type = "protected"
protected_modules = ["forze_identity"]
allowed_importers = []
as_packages = true

[[tool.importlinter.contracts]]
name = "Protect integration subpackages"
type = "protected"
protected_modules = [
    "forze_fastapi",
    "forze_mock",
    "forze_postgres",
    "forze_redis",
    "forze_s3",
    "forze_gcs",
    "forze_bigquery",
    "forze_clickhouse",
    "forze_duckdb",
    "forze_socketio",
    "forze_temporal",
    "forze_inngest",
    "forze_mongo",
    "forze_firestore",
    "forze_rabbitmq",
    "forze_sqs",
    "forze_vault",
    "forze_meilisearch",
    "forze_http",
    "forze_neo4j",
    "forze_mcp",
]
allowed_importers = []
as_packages = true

# ....................... #
# Dead code

[tool.vulture]
paths = [
    "src/forze",
    "src/forze_kits",
    "src/forze_fastapi",
    "src/forze_mock",
    "src/forze_postgres",
    "src/forze_redis",
    "src/forze_s3",
    "src/forze_gcs",
    "src/forze_bigquery",
    "src/forze_clickhouse",
    "src/forze_duckdb",
    "src/forze_socketio",
    "src/forze_temporal",
    "src/forze_inngest",
    "src/forze_mongo",
    "src/forze_firestore",
    "src/forze_rabbitmq",
    "src/forze_sqs",
    "src/forze_identity",
    "src/forze_vault",
    "src/forze_meilisearch",
    "src/forze_http",
    "src/forze_neo4j",
    "src/forze_mcp",
]
sort_by_size = true
min_confidence = 80

# ....................... #
# Maintainability and complexity

[tool.radon]
exclude = ["tests/**"]
cc_min = "C"
mi_min = "B"

# ....................... #
# Dependency analysis

[tool.deptry]
known_first_party = [
    "forze",
    "forze_kits",
    "forze_fastapi",
    "forze_mock",
    "forze_postgres",
    "forze_redis",
    "forze_s3",
    "forze_gcs",
    "forze_bigquery",
    "forze_clickhouse",
    "forze_duckdb",
    "forze_socketio",
    "forze_temporal",
    "forze_inngest",
    "forze_mongo",
    "forze_firestore",
    "forze_rabbitmq",
    "forze_sqs",
    "forze_identity",
    "forze_vault",
    "forze_meilisearch",
    "forze_http",
    "forze_neo4j",
    "forze_mcp",
]
ignore_notebooks = true

[tool.deptry.per_rule_ignores]
DEP002 = [
    "pydantic-extra-types",
    "types-aioboto3",
    "types-aiobotocore",
    "aiobotocore",
    "httpx",                 # required by starlette.testclient.TestClient
    "python-socketio-stubs",
    "python-multipart",
    "email-validator",       # required for pydantic.EmailStr
    #! Added temporarily
    "uvicorn",
    "types-hvac",
]
DEP003 = [
    "types_aiobotocore_s3",
    "types_aiobotocore_sqs",
    "typing_extensions",
    "pydantic_core",
]

# ....................... #
# Ruff configuration

[tool.ruff.lint]
ignore = ["E402"]
